trunk/Archive2/71/042bd0f40e1204/output
main.cpp:3:9: error: 'function' in namespace 'std' does not name a type
 typedef std::function<void()> f_t;
         ^
